--- a/views/services.erb
+++ b/views/services.erb
@@ -1,3 +1,10 @@
 <script>
-  Pard.Services(<%= status %>);
+	function runScript() {
+	  if( window.$ )
+  		Pard.Services(<%= status %>)
+	  else {
+	    window.setTimeout( runScript, 50 )
+	  }
+	}
+	runScript()
 </script>
