--- a/views/layout.erb
+++ b/views/layout.erb
@@ -30,8 +30,7 @@
         <!-- google maps -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
         <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCimmihWSDJV09dkGVYeD60faKAebhYJXg&libraries=places"
-        async defer></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCimmihWSDJV09dkGVYeD60faKAebhYJXg&libraries=places"></script>
         <!-- Monitoring code google-analytics -->
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -43,14 +42,12 @@
           ga('send', 'pageview');
         </script>
 
-
+        <%= stylesheet_tag 'ours' %>
 	</head>
-
 
 	<body>
         <%= javascript_tag 'jquery' %>
         <%= javascript_tag 'ours' %>
-        <%= stylesheet_tag 'ours' %>
     	  <%= yield %>
 	
 <!-- 	<script>
