--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -633,8 +633,9 @@ button{
 }
 
 .dowloadQR-btn{
-  vertical-align: top;
-  margin-left: 1rem;
+  right: 1rem;
+  position: absolute;
+  bottom: 1rem;
 }
 
 .success-inscription-btn{
