--- a/views/layout.erb
+++ b/views/layout.erb
@@ -33,6 +33,7 @@
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCimmihWSDJV09dkGVYeD60faKAebhYJXg&libraries=places"></script>
         <!-- Monitoring code google-analytics -->
         <script>
+
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -57,6 +58,7 @@
   </script>
 
  -->
+  <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
 	</body>
 
 </html>
