--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2025,6 +2025,21 @@ div.dataTables_wrapper div.dataTables_filter{
   }
 }
 
+.slug-input{
+  height: 2rem;
+  width: 18rem;
+  display: inline-block;
+  margin-left: .5rem;
+}
+
+.newLinkTxt{
+  display: block;
+  /* font-weight: bold'; */
+  text-align: center;
+  color: #3885ff;
+  font-size: large;
+}
+
 .white-list-box{
   /* padding-right: 2rem; */
   @include breakpoint (small down){
