--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2006,6 +2006,7 @@ div.dataTables_wrapper div.dataTables_filter{
   position: relative;
   padding: 1rem;
   margin-bottom: .75rem;
+  border-left: 4px solid;
 }
 
 .utilTitle{
