popups close on click background

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2009,6 +2009,13 @@ div.dataTables_wrapper div.dataTables_filter{
   border-left: 4px solid;
 }
 
+.arrow-util-box{
+  position: absolute;
+  left: -.6rem;
+  font-size: 1.4rem;
+  top: 1rem;
+}
+
 .utilTitle{
   font-weight: bold;
 }
