video demo and scroll down button

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -165,7 +165,7 @@ main.mainWelcomePage, main.mainUserPage{
     margin: 0;
   }
   .welcomeSection-container{
-    padding: 4rem 1rem;
+    padding: 4rem 0;
   }
 }
 
@@ -2628,7 +2628,7 @@ tr.permanent-row-program-table-call-manager td{
   }
   span.material-icons{
     font-size: 1.1rem;
-    margin: 3px 0 0 0;
+    margin: 2px 0 0 0;
     @include border-radius($element-border-radius);
   }
   li.is-dropdown-submenu-item{
@@ -3588,14 +3588,22 @@ SERVICES PAGE
   background: white;
   .isContainer {
     height: 100%;
-    padding: 3rem 0;
+    padding: 6rem 0;
   }
   position: relative;
   @include breakpoint (medium down){
     height: 30rem;
     .isContainer {
-      padding: 0;
+      padding: 2.5rem;
     }
+  }
+}
+
+.price-initialSectionServicePage{
+  font-weight: bold;
+  font-size: 1.5rem;
+  @include breakpoint (small down){
+    display: block;
   }
 }
 
@@ -3607,6 +3615,8 @@ SERVICES PAGE
   width: 61.5rem;
   height: 28rem;
   margin: 0 auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   @include breakpoint (medium down){
     @include horizontal-center;
     position: relative;
@@ -3894,6 +3904,55 @@ SERVICES PAGE
   }
 }
 
+.video-service-page{
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: large;
+  span{
+    vertical-align: middle;
+  }
+  /* padding-top: 5rem; */
+}
+
+.video-popup-container{
+  position: relative;
+  text-align: center;
+  clear: both;
+  display: block;
+  /* background-image: url(<%= image_path 'initial_demo_video_img.png' %>); */
+  background-repeat: no-repeat;
+  background-position: center; 
+  @include breakpoint(small down){
+    margin-right: 2rem;
+    margin-bottom: 50vh;
+  }
+}
+
+
+.video-container {
+width: 853px;
+height: 480px;
+display: inline-block;
+@include breakpoint (medium down){
+  width: 95vw;
+  height: 53.45vw;
+  @include horizontal-center;
+}
+}
+
+.close-video-popup.close-button{
+  color: $grey-2;
+}
+.close-video-popup.close-button:hover{
+  color: $grey-1;
+}
+
+.call-icon-service-page{
+  .material-icons{
+    font-size: 2.8rem;
+  }
+}
+ 
 
 /*===============================================
 CROWDFUNDING
