--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1982,17 +1982,17 @@ HEADER
   top: .8rem;
   position: absolute; */
   left: 0rem;
-  top: 1.15rem;
+  top: .8rem;
   position: absolute;
   display: inline-block;
   font-weight: bold;
   a{
+    background-color: $green-pard;
     color:  white;
-    text-decoration: underline;
-    padding: .3rem 0.8rem;
+    padding: .24rem 0.8rem;
   }
   a:hover{
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(76, 182, 50,.9);
   }
   @include breakpoint(small down){
     display: none;
